<resources>
    <string name="app_name">GitHub Viewer</string>

    <string name="user_name">User name</string>
    <string name="search_followers">REPOSITORY</string>
    <string name="followers">Followers</string>
    <string name="search">Search</string>

    <!-- Base Api GitHub v3 URL -->
    <string name="base_url">https://api.github.com/</string>
    <string name="id">id:</string>
    <string name="location">location:</string>
    <string name="company">company:</string>
    <string name="blog">blog:</string>
    <string name="following">Following:</string>
</resources>