<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_owner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_card_view_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@null"
                    android:id="@+id/iv_owner_user_logo"
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    tools:src="@drawable/no_photo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="5dp">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textColor="#596d79"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Super User" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/id"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_owner_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textSize="14sp"
                            tools:text="123456789" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/location"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_owner_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textColor="#596d79"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="brasil" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/company"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_owner_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textColor="#596d79"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="google" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/blog"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_github_url_owner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textSize="18sp"
                            tools:text="https://api.github.com/users/superUser" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_search_repository"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:text="@string/search_followers"
                        android:textColor="@color/colorSecondaryText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/following"
                    android:textColor="#596d79"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_follower_list_owner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingBottom="7dp"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/follower_item" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>
